added some stock photos and updated some text on homepage and about us

--- a/about-us.html
+++ b/about-us.html
@@ -332,8 +332,8 @@
                                     <a href="index.html"><img src="img/logo/logo.png" alt=""></a>
                                 </div>
                                 <div class="footer-text mb-35">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipi sicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
+                                    <p>VRTogether is located in Lexington, KY. We are a diverse team who believes technology should be built 
+                                        for those that will benefit the most to empower their lives.</p>
                                 </div>
                             </div>
                         </div>
@@ -347,12 +347,12 @@
                                         <li><a href="#">home</a></li>
                                         <li><a href="#">about us</a></li>
                                         <li><a href="#">services</a></li>
-                                        <li><a href="#">news</a></li>
-                                        <li><a href="#">contact</a></li>
+                                        <!--<li><a href="#">news</a></li>-->
                                     </ul>
                                     <ul>
-                                        <li><a href="#">privacy policy</a></li>
-                                        <li><a href="#">copyright</a></li>
+                                        <li><a href="#">contact</a></li>
+                                        <!--<li><a href="#">terms of use</a></li>-->
+                                        <!--<li><a href="#">copyright</a></li>-->
                                         <li><a href="#">careers</a></li>
                                     </ul>
                                 </div>
