--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="section-title pr-80 mb-50">
+                            <div class="section-title pr-80 mb-20">
                                 <h6 class="sub-title">about us</h6>
                                 <h2 >VRTogether reduces social isolation and loneliness in our senior citizens through evidence-based virtual reality software.</h2>
                             </div>
@@ -314,7 +314,7 @@
             <!-- about-us-area-end -->
 
             <!-- services-area -->
-            <section class="services-area pt-120 pb-90">
+            <section class="services-area pt-30 pb-90">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-8">
@@ -416,7 +416,7 @@
                                 </div>
                                 <div class="fact-content">
                                     <h4>National Research Grants</h4>
-                                    <p>Lorem ipsum dolor sit amet, con etur adipisicing elit, sed do.</p>
+                                    <p>We are working to clinically validate our technology.</p>
                                 </div>
                             </div>
                         </div>
@@ -453,28 +453,28 @@
                         <div class="col-lg-6 pr-70">
                             <div class="section-title mb-50">
                                 <h6 class="sub-title">faq</h6>
-                                <h2 class="title">get any kind answers here right now.</h2>
+                                <h2 class="title">get answers.</h2>
                             </div>
                             <div class="faq-wrap">
                                 <div class="faq-set">
-                                    <a class="active" href="#"><i class="fal fa-minus"></i> how to edit this wordpress theme?</a>
+                                    <a class="active" href="#"><i class="fal fa-minus"></i> What is VRTogether exactly?</a>
                                     <div class="content" style="display: block;">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedo eiusmod tempor incididunt ut labore et dolore magna
-                                        aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                                        <p>VRTogether is a virtual reality app on the popular Oculus Quest 1 and 2 VR headsets. VRTogether is networked, so you can visit with loved ones inside the experience.
+                                            Each person can design their own custom avatar and feel just like they are next to one another, no matter where you are in the world. Even hold hands!</p>
                                     </div>
                                 </div>
                                 <div class="faq-set">
-                                    <a href="#"><i class="fal fa-plus"></i> How can i make refund from this site?</a>
+                                    <a href="#"><i class="fal fa-plus"></i> What do I do in VRTogether?</a>
                                     <div class="content">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedo eiusmod tempor incididunt ut labore et dolore magna
-                                        aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                                        <p>Take a walk in the forst, go fishing, watch a sunset, and more! We are constantly adding new experiences and all of them can be shared
+                                            with your loved ones!</p>
                                     </div>
                                 </div>
                                 <div class="faq-set">
-                                    <a href="#"><i class="fal fa-plus"></i> how to customize & how to edit?</a>
+                                    <a href="#"><i class="fal fa-plus"></i> Is VRTogether for me?</a>
                                     <div class="content">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sedo eiusmod tempor incididunt ut labore et dolore magna
-                                        aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+                                        <p>If you are a Senior Care Facility, CCRC, hospital, or senior looking for exciting new experiences and ways to connect 
+                                            then VRTogether is for you!.</p>
                                     </div>
                                 </div>
                             </div>
@@ -486,6 +486,7 @@
 
             <!-- testimonial-area -->
             <section class="testimonial-area position-relative gray-bg pt-120 pb-120">
+                <div class="testi-bg" style="left: 0px" data-background="img/bg/testi_bg.jpg"></div>
                 <div class="testi-bg" data-background="img/bg/testi_bg.jpg"></div>
                 <div class="container">
                     <div class="row align-items-center">
@@ -554,14 +555,14 @@
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-5">
-                            <div class="testi-avatar-active">
+                            <!--<div class="testi-avatar-active">
                                 <div class="testi-avatar-box">
                                     <div class="testi-avatar-thumb">
                                         <img src="img/images/testi_avatar01.jpg" alt="">
                                     </div>
                                     <div class="testi-avatar-content">
                                         <span>founder</span>
-                                        <h4>daddy D. yankee</h4>
+                                        <h4>Richard Hoagland</h4>
                                     </div>
                                 </div>
                                 <div class="testi-avatar-box">
@@ -591,7 +592,7 @@
                                         <h4>yalgaar h. halim</h4>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -599,14 +600,14 @@
             <!-- testimonial-area-end -->
 
             <!-- brand-area -->
-            <div class="brand-area gray-bg pt-30 pb-40">
+            <div class="brand-area gray-bg pt-80 pb-40">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3 mb-10">
+                        <div class="col-lg-3 mb-30">
                             <a href="#"><img src="img/brand/brand_nsf.png" alt=""></a>
                         </div>
                         <div class="col-lg-9">
-                            <div class="section-title pr-40 mb-10">
+                            <div class="section-title pr-40 mb-30">
                                 <h6 class="sub-title">We are proud to be an 2021 NSF SBIR awardee.</h6>
                                 <h2 >We are validating VRTogether to ensure our technology is making a positive social impact. </h2>
                             </div>
@@ -618,6 +619,34 @@
                 </div>
             </div>
             <!-- brand-area-end -->
+
+             <!-- newsletter-area -->
+             <section class="newsletter-area cerise-bg pt-120 pb-110">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-xl-5 col-lg-6">
+                            <div class="newsletter-title">
+                                <div class="icon">
+                                    <i class="flaticon-message"></i>
+                                </div>
+                                <div class="section-title full-white-title">
+                                    <h6 class="sub-title">subscribe</h6>
+                                    <h2 class="title">get newsletter</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-7 col-lg-6">
+                            <div class="newsletter-form">
+                                <form action="#">
+                                    <input type="email" placeholder="enter email address">
+                                    <button class="btn"><i class="fal fa-envelope"></i> subscribe now</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- newsletter-area-end -->
 
             <!-- blog-area -->
             <!--<section class="blog-area pt-120 pb-70">
@@ -713,16 +742,17 @@
 
         <!-- footer-area -->
         <footer>
-            <div class="footer-top-area theme-bg pt-180 pb-50">
+            <div class="footer-top-area gray-bg pt-100 pb-50">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-9">
                             <div class="footer-widget mb-50">
                                 <div class="footer-logo mb-35">
-                                    <a href="index.html"><img src="img/logo/w_logo.png" alt=""></a>
+                                    <a href="index.html"><img src="img/logo/logo.png" alt=""></a>
                                 </div>
                                 <div class="footer-text mb-35">
-                                    <p>VRTogether is located in Lexington, KY. We are a diverse team who believes technology should be built for those that will benefit the most to empower their lives.</p>
+                                    <p>VRTogether is located in Lexington, KY. We are a diverse team who believes technology should be built 
+                                        for those that will benefit the most to empower their lives.</p>
                                 </div>
                             </div>
                         </div>
@@ -747,7 +777,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!--<div class="col-lg-4 col-md-6 col-sm-9">
+                        <div class="col-lg-4 col-md-6 col-sm-9">
                             <div class="footer-widget pt-30 mb-50">
                                 <div class="fw-title mb-40">
                                     <h4 class="title">related news</h4>
@@ -784,26 +814,20 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>-->
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="copyright-area primary-bg">
+            <div class="copyright-area copyright-style-two gray-lite-bg">
                 <div class="container">
                     <div class="row align-items-center">
-                        <div class="col-lg-5">
+                        <div class="col-lg-5 col-md-6">
                             <div class="copyright-text">
                                 <h6>Copyright © 2021 All Rights Reserved.</h6>
                             </div>
                         </div>
-                        <div class="col-lg-7">
+                        <div class="col-lg-7 col-md-6">
                             <div class="copyright-right-wrap">
-                                <div class="copyright-form">
-                                    <form action="#">
-                                        <input type="email" name="email" placeholder="enter email address">
-                                        <button class="btn">Join to our mailing list!</button>
-                                    </form>
-                                </div>
                                 <button class="scroll-top scroll-to-target" data-target="html">
                                     <i class="fal fa-long-arrow-up"></i>
                                 </button>
