--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="css/default.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/15484ed40f7b1a1e9b021ca84/d9329d7075e2b54216159ca91.js");</script>
     </head>
     <body>
 
