--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                                     <li><a href="index-3.html">Home Three</a></li>
                                                 </ul>
                                             </li>-->
-                                            <li><a href="about-us.html">about</a></li>
+                                            <!--<li><a href="about-us.html">about</a></li>-->
                                             <!--<li class="dropdown"><a href="#">pages</a>
                                                 <ul class="submenu">
                                                     <li><a href="team.html">Our Team</a></li>
@@ -727,7 +727,7 @@
                                 <div class="fw-link">
                                     <ul>
                                         <li><a href="#">home</a></li>
-                                        <li><a href="#">about us</a></li>
+                                        <!--<li><a href="#">about us</a></li>-->
                                         <li><a href="mailto:richard@vrtogether.us">contact</a></li>
                                         <!--<li><a href="#">services</a></li>-->
                                         <!--<li><a href="#">news</a></li>-->
