added team photos

--- a/about-us.html
+++ b/about-us.html
@@ -259,21 +259,21 @@
                         <div class="col-lg-4 col-md-6 col-sm-8">
                             <div class="team-box text-center mb-30">
                                 <div class="team-thumb position-relative">
-                                    <a href="team-details.html"><img src="img/team/team_thumb05.jpg" alt=""></a>
+                                    <a href="team-details.html"><img src="img/team/team_thumb02.jpg" alt=""></a>
                                 </div>
                                 <div class="team-content">
-                                    <span>Product and Research</span>
-                                    <h4>Dmitry "Dima" Strakovsky</a></h4>
+                                    <span>Technology Lead</span>
+                                    <h4>Charles "Al" Baker</a></h4>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-8">
                             <div class="team-box text-center mb-30">
                                 <div class="team-thumb position-relative">
-                                    <a href="team-details.html"><img src="img/team/team_thumb06.jpg" alt=""></a>
+                                    <a href="team-details.html"><img src="img/team/team_thumb03.jpg" alt=""></a>
                                 </div>
                                 <div class="team-content">
-                                    <span>Artist</span>
+                                    <span>3d Artist</span>
                                     <h4>Stef Keegan</h4>
                                 </div>
                             </div>
@@ -281,11 +281,11 @@
                         <div class="col-lg-4 col-md-6 col-sm-8">
                             <div class="team-box text-center mb-30">
                                 <div class="team-thumb position-relative">
-                                    <a href="team-details.html"><img src="img/team/team_thumb07.jpg" alt=""></a>
+                                    <a href="team-details.html"><img src="img/team/team_thumb04.jpg" alt=""></a>
                                 </div>
                                 <div class="team-content">
-                                    <span>VR Developer</span>
-                                    <h4>Charles 'Al' Baker</h4>
+                                    <span>Research</span>
+                                    <h4>Dmitry 'Dima' Strakovsky</h4>
                                 </div>
                             </div>
                         </div>
