--- a/index.html
+++ b/index.html
@@ -59,14 +59,7 @@
                                                 </div>
                                             </li>
                                             <li class="active"><a href="index.html">Home</a></li>
-                                            <!--<li class="active dropdown"><a href="#">Home</a>
-                                                <ul class="submenu">
-                                                    <li class="active"><a href="index.html">Home One</a></li>
-                                                    <li><a href="index-2.html">Home Two</a></li>
-                                                    <li><a href="index-3.html">Home Three</a></li>
-                                                </ul>
-                                            </li>-->
-                                            <!--<li><a href="about-us.html">about</a></li>-->
+                                            <li><a href="about-us.html">about</a></li>
                                             <!--<li class="dropdown"><a href="#">pages</a>
                                                 <ul class="submenu">
                                                     <li><a href="team.html">Our Team</a></li>
