--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                                 </div>
                                             </li>
                                             <li class="active"><a href="index.html">Home</a></li>
-                                            <li><a href="about-us.html">about</a></li>
+                                            <!--<li><a href="about-us.html">about</a></li>-->
                                             <!--<li class="dropdown"><a href="#">pages</a>
                                                 <ul class="submenu">
                                                     <li><a href="team.html">Our Team</a></li>
