removed links to incomplete page

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                 <div class="services-overlay-icon"><i class="flaticon-capsules"></i></div>
                                 <div class="service-content">
                                     <h6 class="count">01</h6>
-                                    <h3><a href="services-details.html">Share Experiences</a></h3>
+                                    <h3>Share Experiences</h3>
                                     <p>Laugh, play, and go on adventures.</p>
                                 </div>
                                 <div class="service-icon">
@@ -242,7 +242,7 @@
                                 <div class="services-overlay-icon"><i class="flaticon-old-man"></i></div>
                                 <div class="service-content">
                                     <h6 class="count">02</h6>
-                                    <h3><a href="services-details.html">Build Memories</a></h3>
+                                    <h3>Build Memories</h3>
                                     <p>Be together in VRTogether to explore new places and activites.</p>
                                 </div>
                                 <div class="service-icon">
@@ -255,7 +255,7 @@
                                 <div class="services-overlay-icon"><i class="flaticon-pinwheel"></i></div>
                                 <div class="service-content">
                                     <h6 class="count">03</h6>
-                                    <h3><a href="services-details.html">Take Vacations</a></h3>
+                                    <h3>Take Vacations</h3>
                                     <p>Experience the beach, a walk in the forest, and many other wishes right from your room.</p>
                                 </div>
                                 <div class="service-icon">
@@ -268,7 +268,7 @@
                                 <div class="services-overlay-icon"><i class="flaticon-clock"></i></div>
                                 <div class="service-content">
                                     <h6 class="count">04</h6>
-                                    <h3><a href="services-details.html">Spend Time Together</a></h3>
+                                    <h3>Spend Time Together</h3>
                                     <p>Feel next to your loves ones regardless of where they are.</p>
                                 </div>
                                 <div class="service-icon">
